Avoid qrcode getting cropped increase image width for better scanning
remove height to avoid white padding over and under qrcode
(modal box uses the height for content size, but css resize gets ignored)

--- a/css/ContactDetails.scss
+++ b/css/ContactDetails.scss
@@ -137,5 +137,8 @@
 		display: flex;
 		padding: 10px;
 		background-color: #fff;
+		.qrcode {
+			max-width: 100%;
+		}
 	}
 }
